--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
